maze.island.IslandMaze.scala.code
override def run() {
  
  def avanceVersNord () {
    
    setDirection(Direction.NORTH)
    while (estFaceMur() == false) {
      avance();
    }
    //droite();
    //retourne();
   
  }
  
  def suitAGauche() {
    
   	gauche();
    while (estFaceMur() == true) {
      droite();
    }
    avance();
    
  }
  
  def keepHandOnSideWall(etat1 : Int)  {
    
    etat match {
      
      case 0 => avanceVersNord(); etat1 = 1;
      
      case 1 => suitAGauche(); etat1 = 0;
      
      case _ => println("Ce cas ne devrait pas arriver. Corrigez le problème SVP. ");
         
    }
    return etat1
    
  }
  
  var etat = 0;
  
  while (estSurBiscuit == false) {
    keepHandOnSideWall(etat);
  }
  
	prendBiscuit();

  
}
